tests/spec/pass/modules/person.aja
type Person:
    name: str

fuc (p: Person) label(prefix: str) -> str:
    return prefix + p.name

export (
    Person
)
