tests/spec/fail/interface_field_assign.aja
interface Speaker:
    speak(prefix: str) -> str

type Person:
    name: str

fuc (p: Person) speak(prefix: str) -> str:
    return prefix + " " + p.name

fuc make() -> Speaker:
    p = Person("Ana")
    return p

s = make()
s.name = "Zed"
